salma-hayek: fix Class.newInstance deprecation warnings.